Examples/test-suite/errors/pp_missing_file.i
%module xxx

%include "missing_filename.i"
